add about us, almost finish except the logo

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <nav id="topbar" class="blue-grey darken-4">
           <div class="nav-wrapper"><a href="#index-banner" class="brand-logo"> <img src="images/logo/svlogo.png"></a><a href="#" data-activates="mobilenav" class="button-collapse"><i class="mdi-navigation-menu"></i></a>
             <ul class="right hide-on-med-and-down">
-              <li class="scrolllink"><a href="#what">Who we are</a></li>
+              <li class="scrolllink"><a href="#what">What we do</a></li>
               <li class="scrolllink"><a href="#how">Who we work with</a></li>
               <li class="scrolllink"><a href="#who">Services</a></li>
               <li class="scrolllink"><a href="#about">About</a></li>
@@ -28,7 +28,7 @@
             </ul>
             <!--same nav for mobile menu-->
             <ul id="mobilenav" class="side-nav">
-              <li class="scrolllink"><a href="#what">Who we are</a></li>
+              <li class="scrolllink"><a href="#what">What we do</a></li>
               <li class="scrolllink"><a href="#how">Who we work with</a></li>
               <li class="scrolllink"><a href="#who">Services</a></li>
               <li class="scrolllink"><a href="#about">About</a></li>
@@ -54,7 +54,7 @@
       </div>
       <div class="container">
         <section id="what">
-          <h3 class="center">WHO WE ARE</h3>
+          <h3 class="center">WHAT WE DO</h3>
           <div class="row">
             <p>Does your writing need help? Silicon Valley English Institute has what you need! Whether it's editing and polishing of academic and scientific papers, coaching for university application packages, or even improving your spoken American English, we want to help you! Review our services, then email us with your needs. We'll get right back to you with an idea of how we can help.</p>
           </div>
@@ -207,14 +207,70 @@
       <section id="about">
         <div class="row">
           <h3 class="center">About Our Team</h3>
-          <div id="biobox" class="col s12 m3">
-            <h4 class="matename">DATA2DISCOVERY</h4>
-            <h5 class="matetitle">Explore team roles and bios by clicking on the network nodes.</h5>
-            <p class="matelink"></p>
-            <p class="matebio"></p>
-          </div>
-          <div id="teambox" class="col s12 m9">
-            <div id="teamgraph"></div>
+          <div class="leadership content-section container">
+              <div class="leader-section">
+                  <figure class="col s12 m4 leader-figure">
+                      <img class="leader-img" src="./images/joel.jpg">
+                  </figure>
+                  <div class="info-panel col s12 m8">
+                      <div class="leader-name">Joel N. Orr</div>
+                      <div class="leader-title">Founder &amp; Director </div>
+                      <p>
+                          Joel N. Orr, PhD (math, SUNY), is founder and director of SILICON VALLEY ENGLISH INSTITUTE. Author of 11 books, editor of many more, Dr. Orr has coached numerous authors through completion and publication of their books. (Recent books: Outsourcing Everything But The Kitchen Sink, by Ellie Ahi; Painting With Numbers, Randall Bolten; And Then A Miracle, by Sharalee Clawson and Earl Corless; Wake Up, Man Up, Step Up, by Ray Arata) He founded, edited, and published several technology publications, including Computer Graphics World, Extranet News, The Journal of the League for Engineering Automation Productivity, and more. He is co-founder of COFES, the Congress on the Future of Engineering Software, the National Computer Graphics Association, and other technology associations and publications.
+                      </p>
+                      <p>    Dr. Orr has addressed audiences at Harvard, MIT, Stanford, Tsinghua University, Hong Kong University, Singapore University, Cornell, Technion, and many others, on subjects ranging from the future of technology to the power of hypertext and more. He has shared speaking platforms with Bill Clinton, Eric Drexler (who coined the word "nanotechnology"), Ted Nelson (who coined the word "hypertext"), Peter Thiel (founder of Paypal) and many others.
+                      </p>
+                      <p>
+                          Orr is a distinguished speaker, editor, and coach, and has assembled a stellar team of editors and coaches at SILICON VALLEY ENGLISH INSTITUTE.
+                          Anthony Casalena is the Founder and CEO of Squarespace, which he started from his dorm room in 2003. During the company’s early years, Anthony acted as the sole engineer, designer, and support representative for the entire Squarespace platform, allowing for it to be a stable business from the outset.
+                      </p>
+                  </div>
+              </div><!-- end .leader-section -->
+                <hr class="col s12 m12">
+              <div class="leader-section">
+                  <figure class="col s12 m4 leader-figure">
+                      <img class="leader-img" src="./images/Beth-Milwid-headshot.jpg">
+                  </figure>
+                  <div class="info-panel col s12 m8">
+                      <div class="leader-name">Beth Milwid, PhD</div>
+                      <div class="leader-title">Editor &amp; Shepherd</div>
+                      <p>
+                          Dr. Beth Milwid is an organizational psychologist specializing in career development, strategic communications, and corporate training.  Dr. Milwid graduated Phi Beta Kappa from Stanford University, was awarded a PhD in Social/Clinical Psychology from The Wright Institute in Berkeley, and completed the Executive Education for PhDs Program at UCLA’s Graduate School of Management.
+                      </p>
+                      <p> Beth Milwid’s dissertation research on women professionals was featured on the cover of Savvy Magazine and expanded into a popular business book, Working With Men.  Dr. Milwid has appeared on Larry King, Good Morning America, and National Public Radio and lectured at colleges and universities across the country. She has worked as an internal consultant at Apple Computer, PricewaterhouseCoopers, and Ernst & Young, and as an external consultant to organizations ranging from Charles Schwab to US Airways to the Stanford School of Medicine.
+                      </p>
+                      <p>
+                          For over 20 years, Beth Milwid has assisted students, managers, and executives develop, write, and publish business documents.  In the past five years, she has edited more than 500 resumes, cover letters, and emails and helped more than 200 professionals find new jobs, start their own businesses, and gain admission into college and graduate school.
+                      </p>
+                  </div>
+              </div><!-- end .leader-section -->
+              <hr class="col s12 m12">
+              <div class="leader-section">
+                  <figure class="col s12 m4 leader-figure">
+                      <img class="leader-img" src="./images/TaylorRayBusiness.png">
+                  </figure>
+                  <div class="info-panel col s12 m8">
+                      <div class="leader-name">Taylor Ray</div>
+                      <div class="leader-title">Editor &amp; Shepherd</div>
+                      <p>
+                          Taylor Ray teaches Cognitive Kinesthetics at the University of San Francisco in the Executive MBA program. She is also a guest lecturer at the University of California-Berkeley’s Skydeck Venture Accelerator Program. She is a well-respected author, editor and ghost-writer, with 5 recent book titles including: The Definitive Guide to Skype, Painting with Numbers: How to Present Financials So People Can Understand You, Cooking at the Regenerative Design Institute, The New How, and a soon-to-be published book on decision-making for non-profit organizations. Taylor has a B.S. in Neuroscience and Linguistics, and an M.S. in Adult Education. She started her business career in IT over 20 years ago at one of the premier management consulting firms in United States (Deloitte & Touche), implementing large-scale computer systems for state governments. As such, she has a structured way of thinking about the large goals of an assignment, as well as its details. Taylor is known for her professionalism, and her ability to deliver precisely what is needed.
+                      </p>
+                  </div>
+              </div><!-- end .leader-section -->
+              <hr class="col s12 m12">
+              <div class="leader-section">
+                  <figure class="col s12 m4 leader-figure">
+                      <img class="leader-img" src="./images/JeanThilmany.JPG">
+                  </figure>
+                  <div class="info-panel col s12 m8">
+                      <div class="leader-name">Jean Thilmany</div>
+                      <div class="leader-title">Editor &amp; Shepherd</div>
+                      <p>
+                          Jean Thilmany is an engineering and science writer with more than 20 years of experience in that field. She specializes in writing about the place where science, engineering, and medicine meet and is a dab hand at writing clearly about complex issues and translating scientific speak for the lay reader. She’s worked as the computing editor at Mechanical Engineering Magazine, published by the American Association of Mechanical Engineers, for 16 years where she wrote about computer-aided design, finance-element analysis, computational fluid dynamics, and other types of computer-engineering software. Her work has also appeared in CIO Insight, CRM, Human Resources, Processor, Manufacturing Business Technology, Baking Management, and Contract Packaging magazines, and at Inc. online, among many other places. She’s been an editor at Powder Coating Magazine, Women’s Wear Daily, Supermarket News, and Executive Technology. Thilmany also writes essays and her work has been featured in the collection “New York Calling: From Blackout to Bloomberg” (Reaktion Books, 2007), the Chicago Tribune, and Minneapolis Star Tribune, among other outlets.
+                      </p>
+                  </div>
+              </div><!-- end .leader-section -->
+
           </div>
         </div>
       </section>
@@ -234,23 +290,18 @@
         <div class="container">
           <div class="row">
             <div class="col m6 s12">
-              <h5 class="blue-grey-text">Company Bio</h5>
-              <p class="blue-grey-text text-lighten-4">Data2Discovery is based in Bloomington, Indiana, and is run by an energetic management team with extensive experience in data science, scientific computing, semantic technologies and business growth. </p>
+              <h5 class="blue-grey-text">HELP US HELP YOU!</h5>
+              <p class="blue-grey-text text-lighten-4">
+
+                  Need editing? Please send your document (Microsoft Word or LaTeX) to <a href="mailto:info@svenglishinstitute.com">info@svenglishinstitute.com</a>, along with your deadline. We will respond quickly with a quote.
+
+                  Want to apply to the top US universities? Please <a href="mailto:info@svenglishinstitute.com">request our application form for our Premium Application process</a>, to help us determine if we can help you.
+              </p>
             </div>
             <div class="col m6 s12">
               <h5 class="blue-grey-text">Connect</h5>
               <ul>
-                <li class="blue-grey-text text-lighten-4">P.O. Box 5456, Bloomington, IN 47407
-                  <svg class="lnr lnr-map-marker left white-text">
-                    <use xlink:href="#lnr-map-marker"></use>
-                  </svg>
-                </li>
-                <li class="blue-grey-text text-lighten-4">812.202.6190
-                  <svg class="lnr lnr-phone left white-text">
-                    <use xlink:href="#lnr-phone"></use>
-                  </svg>
-                </li>
-                <li><a href="#!" class="blue-grey-text text-lighten-3">info@d2discovery.com
+                <li><a href="#!" class="blue-grey-text text-lighten-3">info@svenglishinstitute.com
                     <svg class="lnr lnr-envelope left white-text">
                       <use xlink:href="#lnr-envelope"></use>
                     </svg></a></li>
@@ -260,7 +311,7 @@
         </div>
         <div class="footer-copyright">
           <div class="container">
-            <p class="blue-grey-text center-align">2014 Data2Discovery Inc.</p>
+            <p class="blue-grey-text center-align">2015 Silicon Valley English Institute</p>
           </div>
         </div>
       </footer>
