change editor img to square and use circle

--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
           <div class="leadership content-section container">
               <div class="leader-section">
                   <figure class="col s12 m4 leader-figure">
-                      <img class="leader-img" src="./images/joel.jpg">
+                      <div class="image-cropper"><img class="leader-img" src="./images/joel.jpg"></div>
                   </figure>
                   <div class="info-panel col s12 m8">
                       <div class="leader-name">Joel N. Orr</div>
@@ -209,7 +209,7 @@
                 <hr class="col s12 m12">
               <div class="leader-section">
                   <figure class="col s12 m4 leader-figure">
-                      <img class="leader-img" src="./images/Beth-Milwid-headshot.jpg">
+                      <div class="image-cropper"><img class="leader-img" src="./images/Beth-Milwid-headshot.jpg"></div>
                   </figure>
                   <div class="info-panel col s12 m8">
                       <div class="leader-name">Beth Milwid, PhD</div>
@@ -227,7 +227,7 @@
               <hr class="col s12 m12">
               <div class="leader-section">
                   <figure class="col s12 m4 leader-figure">
-                      <img class="leader-img" src="./images/TaylorRayBusiness.png">
+                      <div class="image-cropper"><img class="leader-img" src="./images/TaylorRayBusiness.png"></div>
                   </figure>
                   <div class="info-panel col s12 m8">
                       <div class="leader-name">Taylor Ray</div>
@@ -240,7 +240,7 @@
               <hr class="col s12 m12">
               <div class="leader-section">
                   <figure class="col s12 m4 leader-figure">
-                      <img class="leader-img" src="./images/JeanThilmany.JPG">
+                      <div class="image-cropper"><img class="leader-img" src="./images/JeanThilmany.JPG"></div>
                   </figure>
                   <div class="info-panel col s12 m8">
                       <div class="leader-name">Jean Thilmany</div>
