change nav color, delete background image

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
           <div class="row">
             <div class="col s12 m6 l3 whatcolumn">
               <div class="whatheader">
-                <div class="whatgraphic-exo"><img src="images/what-graphics/smart.svg" class="whatgraphic"></div>
+                <!-- <div class="whatgraphic-exo"><img src="images/what-graphics/smart.svg" class="whatgraphic"></div> -->
                 <div class="whattitle">
                   <h5 class="center">EDITORS</h5>
                 </div>
@@ -72,7 +72,7 @@
             </div>
             <div class="col s12 m6 l3 whatcolumn">
               <div class="whatheader">
-                <div class="whatgraphic-exo"><img src="images/what-graphics/flexible.svg" class="whatgraphic"></div>
+                <!-- <div class="whatgraphic-exo"><img src="images/what-graphics/flexible.svg" class="whatgraphic"></div> -->
                 <div class="whattitle">
                   <h5 class="center">SERVICES</h5>
                 </div>
@@ -83,7 +83,7 @@
             </div>
             <div class="col s12 m6 l3 whatcolumn">
               <div class="whatheader">
-                <div class="whatgraphic-exo"><img src="images/what-graphics/semantic.svg" class="whatgraphic"></div>
+                <!-- <div class="whatgraphic-exo"><img src="images/what-graphics/semantic.svg" class="whatgraphic"></div> -->
                 <div class="whattitle">
                   <h5 class="center">COACHING</h5>
                 </div>
@@ -94,7 +94,7 @@
             </div>
             <div class="col s12 m6 l3 whatcolumn">
               <div class="whatheader">
-                <div class="whatgraphic-exo"><img src="images/what-graphics/scalable.svg" class="whatgraphic"></div>
+                <!-- <div class="whatgraphic-exo"><img src="images/what-graphics/scalable.svg" class="whatgraphic"></div> -->
                 <div class="whattitle">
                   <h5 class="center">GOAL</h5>
                 </div>
@@ -111,18 +111,18 @@
           <h3 class="center">Our clients are typically from one of these three groups:</h3>
           <div class="row steps">
             <div class="step1 col s12 m4">
-              <div class="step"><span class="circlenum one">1</span>
+              <div class=""><span class="circlenum one">1</span>
                 <p class="explainstep">Students whose primary language is not English.
                   We help you meet the requirements to obtain admission to the very best universities.</p>
               </div>
             </div>
             <div class="step2 col s12 m4">
-              <div class="step"><span class="circlenum two">2</span>
+              <div class=""><span class="circlenum two">2</span>
                 <p class="explainstep">Researchers whose expertise is not written English. We help you get published in the most prestigious journals.</p>
               </div>
             </div>
             <div class="step3 col s12 m4">
-              <div class="step"><span class="circlenum three">3</span>
+              <div class=""><span class="circlenum three">3</span>
                 <p class="explainstep">Business professionals who want to strengthen their written and spoken communication in American English. We help you ensure that your meaning is clearly understood in every business situation.</p>
               </div>
             </div>
