white subtitle text

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <div class="container-content">
                 <div class="row center">
                     <h1 class="center orange-text">Making Your English Writing The Best It Can Be!</h1>
-                    <h5 class="black-text text-lighten-3">Your brilliance - our support! Your success is our
+                    <h5 class="white-text text-lighten-3">Your brilliance - our support! Your success is our
                         goal!</h5>
                 </div>
             </div>
