--- a/index.html
+++ b/index.html
@@ -123,22 +123,22 @@
             <h3 class="center">Our clients are typically from one of these three groups:</h3>
 
             <div class="row steps">
-                <div class="step1 col s12 m4">
-                    <div class=""><span class="circlenum one">1</span>
+                <div class="step1 col s12 m4 scaleIn">
+                    <div class="step-number"><span><h5>1</h5></span>
 
                         <p class="explainstep">Students whose primary language is not English.
                             We help you meet the requirements to obtain admission to the very best universities.</p>
                     </div>
                 </div>
-                <div class="step2 col s12 m4">
-                    <div class=""><span class="circlenum two">2</span>
+                <div class="step2 col s12 m4 scaleIn">
+                    <div class="step-number"><span><h5>2</h5></span>
 
                         <p class="explainstep">Researchers whose expertise is not written English. We help you get
                             published in the most prestigious journals.</p>
                     </div>
                 </div>
-                <div class="step3 col s12 m4">
-                    <div class=""><span class="circlenum three">3</span>
+                <div class="step3 col s12 m4 scaleIn">
+                    <div class="step-number"><span><h5>3</h5></span>
 
                         <p class="explainstep">Business professionals who want to strengthen their written and
                             spoken communication in American English. We help you ensure that your meaning is
