add contact section

--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
                     <li class="scrolllink"><a href="#what">What we do</a></li>
                     <li class="scrolllink"><a href="#how">Who we work with</a></li>
                     <li class="scrolllink"><a href="#who">Services</a></li>
-                    <li class="scrolllink"><a href="#about">About</a></li>
+                    <li class="scrolllink"><a href="#about">Our team</a></li>
+                    <li class="scrolllink"><a href="#contact">Contact us</a></li>
                     <!--li.scrolllink
                     a(href="#workwithus") Work With Us
 
@@ -33,7 +34,8 @@
                     <li class="scrolllink"><a href="#what">What we do</a></li>
                     <li class="scrolllink"><a href="#how">Who we work with</a></li>
                     <li class="scrolllink"><a href="#who">Services</a></li>
-                    <li class="scrolllink"><a href="#about">About</a></li>
+                    <li class="scrolllink"><a href="#about">Our team</a></li>
+                    <li class="scrolllink"><a href="#contact">Contact us</a></li>
                     <!--li.scrolllink
                     a(href="#workwithus") Work With Us
 
@@ -124,21 +126,21 @@
 
             <div class="row steps">
                 <div class="step1 col s12 m4 scaleIn">
-                    <div class="step-number"><span><h5>1</h5></span>
+                    <div class="step-number"><span><h5>ONE</h5></span>
 
                         <p class="explainstep">Students whose primary language is not English.
                             We help you meet the requirements to obtain admission to the very best universities.</p>
                     </div>
                 </div>
                 <div class="step2 col s12 m4 scaleIn">
-                    <div class="step-number"><span><h5>2</h5></span>
+                    <div class="step-number"><span><h5>TWO</h5></span>
 
                         <p class="explainstep">Researchers whose expertise is not written English. We help you get
                             published in the most prestigious journals.</p>
                     </div>
                 </div>
                 <div class="step3 col s12 m4 scaleIn">
-                    <div class="step-number"><span><h5>3</h5></span>
+                    <div class="step-number"><span><h5>THREE</h5></span>
 
                         <p class="explainstep">Business professionals who want to strengthen their written and
                             spoken communication in American English. We help you ensure that your meaning is
@@ -225,7 +227,7 @@
     </section>
     <section id="about">
         <div class="row">
-            <h3 class="center">About Our Team</h3>
+            <h3 class="center">Our Team</h3>
 
             <div class="leadership content-section container">
                 <div class="leader-section">
@@ -373,8 +375,10 @@
     .section
     -->
     <footer class="page-footer blue-grey darken-4">
+        <section id="contact">
         <div class="container">
             <div class="row">
+                <h3 class="center blue-grey-text">Contact Us</h3>
                 <div class="col m6 s12">
                     <h5 class="blue-grey-text">HELP US HELP YOU!</h5>
 
@@ -406,6 +410,7 @@
                 <p class="blue-grey-text center-align">2016 Silicon Valley English Institute</p>
             </div>
         </div>
+            </section>
     </footer>
 </div>
 <script src="scripts/vendor/vendor.js"></script>
