--- a/index.html
+++ b/index.html
@@ -125,21 +125,21 @@
             <h3 class="center">Our clients are typically from one of these three groups:</h3>
 
             <div class="row steps">
-                <div class="step1 col s12 m4 scaleIn">
+                <div class="step1 col s12 m3 scaleIn card">
                     <div class="step-number"><span><h5>ONE</h5></span>
 
                         <p class="explainstep">Students whose primary language is not English.
                             We help you meet the requirements to obtain admission to the very best universities.</p>
                     </div>
                 </div>
-                <div class="step2 col s12 m4 scaleIn">
+                <div class="step2 col s12 m3 scaleIn card">
                     <div class="step-number"><span><h5>TWO</h5></span>
 
                         <p class="explainstep">Researchers whose expertise is not written English. We help you get
                             published in the most prestigious journals.</p>
                     </div>
                 </div>
-                <div class="step3 col s12 m4 scaleIn">
+                <div class="step3 col s12 m3 scaleIn card">
                     <div class="step-number"><span><h5>THREE</h5></span>
 
                         <p class="explainstep">Business professionals who want to strengthen their written and
